@@ -2,13 +2,19 @@ package com.example.demo.controller;
 
 import com.example.demo.model.Role;
 import com.example.demo.model.User;
+import com.example.demo.repository.RoleRepository;
 import com.example.demo.repository.UserRepository;
+
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.Arrays;
 import java.util.HashSet;
@@ -19,6 +25,9 @@ public class AutheController {
     @Autowired
     UserRepository userRepository;
 
+    @Autowired
+    RoleRepository roleRepository;
+
     @GetMapping("/login")
     public String login() {
         return "login";
@@ -28,18 +37,26 @@ public class AutheController {
     public String showRegistrationForm(Model model) {
         model.addAttribute("user", new User());
 
-        return "signup";
+        return "register";
     }
 
-    @PostMapping("/process-register")
-    public String processRegister(User user) {
+    @PostMapping("/register")
+    public String registerUser(@ModelAttribute("user") User user, Model model) {
+        if (userRepository.findByEmail(user.getEmail()).isPresent()) {
+            model.addAttribute("error", "Email đã tồn tại!");
+            return "register"; // quay lại trang register kèm lỗi
+        }
         BCryptPasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
-        String encodedPassword = passwordEncoder.encode(user.getPassword());
-        user.setPassword(encodedPassword);
-        Set<Role> roles = new HashSet<>(Arrays.asList(new Role("USER")));
-        user.setRoles(roles);
+        user.setPassword(passwordEncoder.encode(user.getPassword()));
+        Role defaultRole = roleRepository.findByName("USER")
+            .orElseThrow(() -> new RuntimeException("Role USER không tồn tại"));
+        user.setRoles(Set.of(defaultRole));
+
         userRepository.save(user);
 
-        return "redirect:/login";
+        return "redirect:/login?success";
     }
+
+}
+
 }
